    * Mac OS compile fix suggested by Rudi Leitgeb.
    * Mac OS improved cleanup during capture_stop() suggested by Matt
      Robinson.
    * Added new Linux-only function dc1394_capture_get_dma_fd().
    * Better Linux error checking when /dev/video1394 is not readable.

2006-10-05 David Moore <dcm@acm.org>
    * Fixed Linux compile error

2006-10-07 David Moore <dcm@acm.org>
    * Fixed computation of packets per frame for cameras that do not support
      the PACKET_PER_FRAME register.
	
2006-10-10 Damien <ddouxchamps@users.sf.net>
    * fixed the value returned by dc1394_get_operation_mode (thanks to Georg
      Glock for spotting the bug).

2006-10-16 David Moore <dcm@acm.org>
    * Migrated from CVS to SVN
    * Changed Version_2_0 to the default branch (HEAD)
    * Modified directory structure (libdc1394 -> dc1394)
    * Changed default tarball filename to libdc1394
    * Changed the get_data_depth() functions to compute a guess when the
      register is not available (thanks to AgBr and Daniel Westhoff for
      finding this one).
	
2006-10-10 Damien <ddouxchamps@users.sf.net>
    * added new conversion functions that work on dc1394video_frame_t.

2006-10-20 David Moore <dcm@acm.org>
    * added new example program grab_partial_image_dma
    * converted octlet_t/quadlet_t/nodeid_t to uint64_t/uint32_t/uint16_t

2006-10-23 David Moore <dcm@acm.org>
    * fixed math error in computing timestamps during capture

2006-11-02 Damien Douxchamps<ddouxchamps@users.sf.net>
    * applied 3 patches from Daniel Drake for AVT functions:
       1. new functions that write/read more than one register at a time
       2. correct shading control and fully implement it
       3. read/write shading images
	
2006-11-03 Damien Douxchamps<ddouxchamps@users.sf.net>
    * Release 2.0.0-pre4
	
2006-11-03 Damien Douxchamps<ddouxchamps@users.sf.net>
    * Create more handles to avoid conflicts in the grabselfid function
      (thanks to Irv Elshoff)